# sembr

./: .dockerignore  .env.example  .gitattributes  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Dockerfile  INSTALL.md  NOTICE  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
agent/: AGENTS.md  INSTALL.md  PUBLIC_INSTALL.md  public_install.md
agent/sembr/: SKILL.md
agent/sembr/references/: endpoints.md  errors.md  recipes.md  schemas.md
architecture/: index.html
assets/brand/: README.md
configuration/: index.html
contributing/: index.html
deployment/public/: index.html
deployment/wechat-official-accounts/: index.html
docs/: architecture.md  configuration.md  contributing.md  getting-started.md  index.md
docs/deployment/: public.md  wechat-official-accounts.md
docs/modules/: api.md  collector.md  dashboard.md  db-schema.md  db.md  embedder.md  index.md  logbus.md  matcher.md  notifier.md  summarizer.md  vector-store.md
docs/zh/: configuration.md  getting-started.md  index.md
docs/zh/deployment/: wechat-official-accounts.md
getting-started/: index.html
modules/: index.html
modules/api/: index.html
modules/collector/: index.html
modules/dashboard/: index.html
modules/db/: index.html
modules/db-schema/: index.html
modules/embedder/: index.html
modules/logbus/: index.html
modules/matcher/: index.html
modules/notifier/: index.html
modules/summarizer/: index.html
modules/vector-store/: index.html
prompts/extraction/: _base.md  _base_en.md  fed_watch.json  fed_watch.md
prompts/instruction/: default.md  review.md
prompts/system/: review.md
scripts/: benchmark_embedder.py  benchmark_siliconflow.py  diagnose.py  probe_rss.py  probe_rsshub.py  revive_dead.py  test_smtp.py
search/: search_index.json
sembr/: config.py  main.py  models.py
sembr/api/: external_fire.py  extraction_spec.py  feeds.py  feeds_fire.py  fire.py  health.py  history.py  intents.py  kb.py  maintenance.py  prompts.py  restart.py  settings.py  settings_envfile.py  settings_restart.py  translate.py
sembr/collector/: base.py  fire_tasks.py  host_limiter.py  initial_feeds.py  newsapi.py  phase.py  rss.py  scheduler.py  wisburg.py
sembr/dashboard/: auth.py  events.py  logs_routes.py  read_model.py  retention.py  routes.py  schemas.py  system_metrics.py
sembr/db/: articles.py  event_buffer.py  feed_tags.py  feeds.py  intent_sub_texts.py  intents.py  match_seen.py  mr_cache.py  sqlite.py  summary_history.py
sembr/embedder/: base.py  bge_m3.py  factory.py  openai_compat.py  scheduler.py
sembr/kb/: __init__.py  distill.py  gitrepo.py  lint.py  merge.py  store.py
sembr/logbus/: __init__.py  bus.py  handler.py  install.py  router.py
sembr/maintenance/: __init__.py  dead_ttl.py  manual_prune.py  qdrant_ttl.py  reconcile.py  tasks.py
sembr/matcher/: backfill.py  backfill_tasks.py  callback.py  cron_recall.py  event_buffer.py  event_cache.py  event_match.py  fire_tasks.py  jobs.py  scan.py
sembr/notifier/: __init__.py  base.py  dispatcher.py  email.py
sembr/notifier/templates/: email_digest.html.jinja2  email_digest_pdf.html.jinja2  email_template_error.html.jinja2
sembr/summarizer/: aggregate.py  facts_render.py  grouping.py  htmltext.py  models.py  mr_extract.py  mr_extract_tasks.py  pipeline.py  review.py  spec.py  spec_gen.py  templates.py
sembr/vector_store/: intents.py  news.py  qdrant.py
tests/: conftest.py  test_api_external_fire.py  test_api_feeds_delete.py  test_api_feeds_fire.py  test_api_feeds_patch.py  test_api_fire.py  test_api_maintenance.py  test_articles_body_truncate.py  test_backfill.py  test_collector_fire_tasks.py  test_collector_newsapi.py  test_collector_wisburg.py  test_collector_wisburg_qa.py  test_config_newsapi.py  test_cron_recall.py  test_dashboard_auth_external_fire.py  test_dashboard_auth_history_aggregate.py  test_db_cascade.py  test_db_feeds_migration.py  test_db_feeds_newsapi_inherit.py  test_db_migrations.py  test_email_channel_strict.py  test_email_notifier.py  test_email_pdf_attachment.py  test_embedding.py  test_event_buffer.py  test_fire_tasks.py  test_history_aggregate.py  test_history_api.py  test_history_export.py  test_history_frontend_static.py  test_history_qa.py  test_intent_filter_compat.py  test_intent_match_enhancement_qa.py  test_intents.py  test_jobs_cron.py  test_kb_api.py  test_kb_db.py  test_kb_ingest.py  test_kb_lint.py  (+38 more)
tests/api/: test_extraction_spec_api.py  test_feeds_create_with_tags.py  test_intents_template_validation.py  test_prompts_crud.py  test_prompts_rename_integration.py  test_prompts_routes.py  test_restart_endpoint.py
tests/collector/: test_collect_feed_timing.py  test_collect_feed_watermark.py  test_host_limiter.py  test_phase_determinism.py
tests/dashboard/: test_articles_filter.py  test_auth.py  test_events.py  test_feed_events_pagination.py  test_feeds_group_key.py  test_feeds_group_key_newsapi.py  test_feeds_pagination.py  test_instrumentation.py  test_newsapi_fire_endpoint.py  test_read_model.py  test_retention.py  test_system_metrics.py
tests/db/: test_feeds_tags.py  test_intent_migration_dropcustom.py  test_intents_template_refs.py  test_match_seen_index.py  test_mr_cache.py  test_summary_history_reduce_mode.py
tests/notifier/: test_email_send_error.py
tests/summarizer/: test_facts_render.py  test_llm_structured.py  test_map_for_reduce.py  test_pipeline_facts.py  test_pipeline_template_errors.py  test_reduce_failopen_citations.py  test_spec.py  test_spec_gen.py  test_templates.py
web/: README.md
web/static/: app.js  codehl.js  feeds.js  index.html  intents.js  kb.html  kb.js  login.html  logs.js  maintenance.js  settings.js  style.css  templates.js
zh/: index.html
zh/configuration/: index.html
zh/getting-started/: index.html
(+7 files in other folders)
