[project]
name = "sembr"
version = "0.1.0.dev0"
description = "Reverse-RAG news monitoring: define an intent, receive matched news pushes."
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "Apache-2.0" }
authors = [{ name = "Peakstone Labs" }]

dependencies = [
    "fastapi==0.115.14",
    "uvicorn[standard]>=0.30,<0.32",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "aiosqlite>=0.20,<0.21",
    "qdrant-client==1.17.1",
    "pyyaml>=6.0,<7",
    "httpx>=0.27,<0.28",
    "feedparser>=6.0,<7",
    "apscheduler==3.11.2",
    "sentence-transformers==3.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<0.25",
    "respx>=0.21,<0.23",
    "ruff>=0.6,<0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sembr"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# On Linux x86_64 (CI / server deployments) sentence-transformers would otherwise pull
# the CUDA-enabled torch wheel (~2 GB extra). Force the CPU index on that platform only;
# arm64 (Mac M4 Docker) gets the default wheel which has no CUDA anyway.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
