[project]
name = "sembr"
version = "1.0.0"
description = "Self-hosted intent radar — Reverse-RAG news monitoring with semantic intent matching across RSS, NewsAPI, and Twitter."
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "Apache-2.0" }
authors = [{ name = "Peakstone Labs" }]
keywords = [
    "rss",
    "news",
    "monitoring",
    "rag",
    "reverse-rag",
    "embeddings",
    "qdrant",
    "fastapi",
    "llm",
    "digest",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Office/Business :: News/Diary",
    "Framework :: FastAPI",
    "Typing :: Typed",
]

dependencies = [
    "fastapi==0.115.14",
    "uvicorn[standard]>=0.30,<0.32",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "aiosqlite>=0.20,<0.21",
    "qdrant-client==1.17.1",
    "pyyaml>=6.0,<7",
    "httpx>=0.27,<0.28",
    "feedparser>=6.0,<7",
    "html2text>=2024.2,<2025",
    "apscheduler==3.11.2",
    "jinja2>=3.1,<4",
    "markdown>=3.6,<4",
    "email-validator>=2.0,<3",
    "docker>=7.0,<8",
    "weasyprint>=63,<64",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<0.25",
    "respx>=0.21,<0.23",
    "ruff>=0.6,<0.8",
    "mkdocs-material>=9.5,<10",
    "pypdf>=4,<6",
]

[project.urls]
Homepage      = "https://github.com/Peakstone-Labs/sembr"
Documentation = "https://peakstone-labs.github.io/sembr"
Repository    = "https://github.com/Peakstone-Labs/sembr"
Issues        = "https://github.com/Peakstone-Labs/sembr/issues"
Changelog     = "https://github.com/Peakstone-Labs/sembr/blob/main/CHANGELOG.md"
"Release notes" = "https://github.com/Peakstone-Labs/sembr/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sembr"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Recommended set: defaults + isort + pyupgrade + bugbear + async/logging + ruff-native + style polish.
# Excluded on purpose: D (pydocstyle, conflicts with Dxx cleanup), ANN, G, COM, N, ARG, S, PTH, TRY, PL.
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "ASYNC", # flake8-async (event-loop blocking calls)
    "LOG",   # flake8-logging
    "RUF",   # ruff-native rules
    "SIM",   # flake8-simplify
    "C4",    # flake8-comprehensions
    "PIE",   # flake8-pie
]
ignore = [
    "E501",     # line length handled by formatter
    "E402",     # sembr uses module-level lazy imports to avoid cycles
    "B008",     # FastAPI Depends() in defaults
    "SIM117",   # nested with-statements often clearer for async context managers
    "ASYNC109", # async timeout kwarg — false positives with httpx.timeout / explicit asyncio.wait_for
    "RUF001",   # ambiguous unicode in strings (Chinese punctuation is legitimate)
    "RUF002",   # ambiguous unicode in docstrings
    "RUF003",   # ambiguous unicode in comments
    "RUF100",   # unused noqa — legacy noqa cleanup is a separate task, not scope of 02
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # assert False is fine in tests

[tool.ruff.lint.isort]
known-first-party = ["sembr"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

